<resources>
    <string name="app_name">HouSync</string>

    <!-- Menu -->
    <string name="main_activity_menu">Home</string>
    <string name="house_manager_activity_menu">House Manager</string>
    <string name="notes_activity_menu">Notes</string>
    <string name="shopping_list_activity_menu">Shopping List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- House Manager -->
    <string name="title_activity_house_manager">House Manager</string>
    <string name="menu_house_selected">House</string>
    <string name="house_settings_menu_title">%s settings</string>

        <!-- Delete house warning -->
        <string name="delete_house_alert_title">Delete %1$s?</string>
        <string name="delete_house_alert_text">Are you sure you want to delete this house?</string>

    <!-- House Details -->
    <string name="title_activity_house_details">House Details</string>
    <string name="action_update_house">Update (Sync)</string>
    <string name="action_edit_house">Edit</string>
    <string name="action_delete_house">Delete</string>
    <string name="hosts_title">The hosts</string>


    <!-- Add House -->
    <string name="title_activity_add_house">Add new House</string>
    <string name="add_house_button">Add</string>
    <string name="add_house_name">Name</string>
    <string name="house_name_mandatory">Please give a name to your house</string>

    <!-- Edit House -->
    <string name="title_activity_edit_house">Edit House</string>
    <string name="title_edit_house">Edit %1$s</string>
    <string name="edit_house_name">Name:</string>
    <string name="save_edit_house_button">Save</string>
    <string name="discard_edit_house_button">Discard changes</string>

        <!-- Users -->
        <string name="add_user_id">ID:</string>
        <string name="add_user_button">Add host</string>
        <string name="add_user_title">Add a new Host</string>
        <string name="invalid_user_id">The Id inserted is incorrect</string>
        <string name="incorrect_user_id">The Id doesn\'t correspond to a User</string>


    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>

    <string name="title_activity_log_in">Log In</string>


    <string name="user_file_key">pt.nb_web.housync.user_file_key</string>
    <string name="houSyncUserId">user_id</string>
    <string name="houSyncUserName">user_name</string>

    <!-- Sign-in Activity -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signing_in_canceled">Login attempt canceled</string>
    <string name="signing_in_error">Login attempt failed</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Facebook App ID -->
    <string name="facebook_app_id">1037666926296034</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Log In Activity titles -->
    <string name="title_google_login">Google Account</string>
    <string name="title_facebook_login">Facebook Account</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="desc_facebook_icon">Facebook Logo</string>


    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <string name="manage_sign_in">Manage SignIn</string>
    <string name="no_login">Not Loged In</string>
    <string name="last_sync">Last sync</string>
    <string name="never_sync">Never</string>
    <string name="sync">Sync</string>

    <string name="fragment_no_house_title">Select a House</string>
    <string name="remove_user_title">Remove a Host</string>
    <string name="repeated_user_id">This user is already a Host</string>
    <string name="self_user_id">You are already a Host</string>
    <string name="action_select_house">Select</string>


</resources>
