<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item android:id="@+id/menu_house_selected"
        android:title="@string/menu_house_selected" >
        <!-- "file" submenu -->
        <menu>
            <item
                android:id="@+id/action_update"
                android:orderInCategory="100"
                android:title="@string/action_update_house"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_edit"
                android:orderInCategory="100"
                android:title="@string/action_edit_house"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_delete"
                android:orderInCategory="100"
                android:title="@string/action_delete_house"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
