<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pt.nb_web.housync.Activities.LogInActivity"
    android:orientation="vertical"
    android:weightSum="2"
    tools:showIn="@layout/activity_log_in">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/login_margin"
        android:layout_marginBottom="@dimen/login_margin"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/google_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/desc_google_icon"
                android:src="@mipmap/ic_google_g_logo" />

            <TextView
                android:id="@+id/google_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title_google_login"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/google_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_out"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/google_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:gravity="center"
                android:maxLines="5"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/google_sign_out_and_disconnect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                tools:visibility="visible">

                <Button
                    android:id="@+id/google_sign_out_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_out"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/google_disconnect_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/disconnect"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/login_margin"
        android:layout_marginBottom="@dimen/login_margin"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/facebook_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/desc_facebook_icon"
                android:src="@mipmap/ic_facebook_logo" />

            <TextView
                android:id="@+id/facebook_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title_facebook_login"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/facebook_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_out"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/facebook_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:gravity="center"
                android:maxLines="5"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                tools:visibility="gone"/>

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
