<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    tools:context=".fragments.HouseDetailsActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutImage"
        android:orientation="vertical">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="150dp" >

            <ImageView
                android:id="@+id/recycler_item_house_image"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/house"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/house_fragment_house_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/recycler_item_house_image"
                android:layout_alignRight="@id/recycler_item_house_image"
                android:layout_alignBottom="@id/recycler_item_house_image"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="left"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/last_sync"
                android:textStyle="bold"
                android:paddingRight="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/last_sync_text_view"
                android:text="@string/never_sync"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hosts_title"
                android:textSize="@dimen/text_title2"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/users_house_manager_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_delete_house"
        android:id="@+id/delete_house"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true" />


</RelativeLayout>
